# advent-of-code

2024/: .gitignore
2024/day1/: Makefile  day1.cc  day1.h  main.cc
2024/day2/: Makefile  main.cc
2024/day3/: Makefile  day3.cc  day3.h  main.cc
2024/day4/: Makefile  day4.cc  day4.h  main.cc
2024/day5/: Makefile  main.cc
2024/day6/: Makefile  day6.cc  day6.h  main.cc
2024/day7/: Makefile  main.cc
2024/day8/: Makefile  main.cc
2024/lib/: utils.cc  utils.h
2025/: CMakeLists.txt  CMakePresets.json
2025/day1/: day1.cpp  day1.h  main.cpp
2025/day2/: day2.cpp  day2.h  main.cpp
2025/day3/: day3.cpp  day3.h  main.cpp
2025/day4/: day4.cpp  day4.h  main.cpp
2025/day5/: day5.cpp  day5.h  main.cpp
2025/day6/: day6.cpp  day6.h  main.cpp
2025/day7/: day7.cpp  day7.h  main.cpp
2025/day8/: day8.cpp  day8.h  main.cpp
